Part 4 - Rest Done + Unit Testing